Add Polynomial Regression.

--- a/Linear-Regression/LinearRegression.ipynb
+++ b/Linear-Regression/LinearRegression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,11 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"dataSet2.txt\")"
+    "df = pd.read_csv(\"../Datasets/dataSet2.txt\")"
    ]
   },
   {
